--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>Lewis Darnton - About</title>
+		<title>noein - contact</title>
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -142,10 +142,12 @@
 				</div>
 				<div class="col-12 col-md-4 text-center text-md-right">
 					<ul class="list-horizontal-unstyled">
+						<li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
+						<li><a href="https://calendly.com/"><i class="fab fa-calendar contact"></i></a></li>
 						<li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
-								<li><a href="mailto:contact@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
-										<li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
-											<li><a href="tel:"><i class="far fa-phone contact"></i></a></li>
+						<li><a href="mailto:contact@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
+						<li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
+						<li><a href="tel:"><i class="far fa-phone contact"></i></a></li>
 					</ul>
 				</div>
 			</div><!-- end row -->
