--- a/contact.html
+++ b/contact.html
@@ -143,7 +143,7 @@
 				<div class="col-12 col-md-4 text-center text-md-right">
 					<ul class="list-horizontal-unstyled">
 						<li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
-						<li><a href="https://calendly.com/"><i class="fab fa-calendar contact"></i></a></li>
+						<li><a href="https://calendly.com/"><i class="fa-regular fa-calendar contact"></i></a></li>
 						<li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
 						<li><a href="mailto:contact@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
 						<li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
