Remove chips and fix review carousel

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A thinking space to design a life on your own terms.">
-    <meta name="keywords" content="coaching, clarity, thinking space">
+    <meta name="description" content="Noein is a calm coaching space to pause, think, and move forward with clarity.">
+    <meta name="keywords" content="coaching, clarity, thinking space, noein">
     <title>noein - A space to think.</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -51,13 +51,13 @@
                         <a class="nav-link" href="/"><p class="underlineload grey-font-color">Home</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="about"><p class="underlineload grey-font-color">About</p></a>
+                        <a class="nav-link" href="#work"><p class="underlineload grey-font-color">Work with me</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="work"><p class="underlineload grey-font-color">Work with me</p></a>
+                        <a class="nav-link" href="#about"><p class="underlineload grey-font-color">About</p></a>
                     </li>
                     <li class="nav-item grey-font-color">
-                        <a class="nav-link" href="contact"><p class="underlineload grey-font-color">Contact</p></a>
+                        <a class="nav-link" href="#contact"><p class="underlineload grey-font-color">Contact</p></a>
                     </li>
                 </ul>
                 <button class="nav-toggle-btn d-lg-none">
@@ -68,26 +68,27 @@
     </header>
 
     <main class="flex-fill">
-        <section class="section-spacer">
+        <section id="about" class="section-spacer">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
-                        <p class="pill-badge mb-3">Coaching with Alexandra</p>
-                        <h1 class="mb-4">A thinking space to find clarity and act with intention.</h1>
-                        <p class="mb-4">Noein is a calm place to pause, reconnect, and design a life on your own terms. Bring the questions that feel loudest—we will untangle them together so you can choose your next step with confidence.</p>
+                        <h1 class="mb-3">A space to think.</h1>
+                        <p class="mb-3">At Noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                        <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about receiving answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
+                        <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                         <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="work">Work with me</a>
-                            <a class="btn btn-outline-dark mb-2" href="contact">Book a conversation</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="#work">Work with me</a>
+                            <a class="btn btn-outline-dark mb-2" href="#contact">Book a discovery call</a>
                         </div>
                     </div>
                     <div class="col-lg-5">
-                        <div class="content-card">
-                            <h5 class="mb-3">What we can explore</h5>
-                            <ul class="list-checks">
-                                <li>Building trust in your own decisions</li>
-                                <li>Making changes without losing yourself</li>
-                                <li>Leadership that aligns with your values</li>
-                                <li>Calm structure for complex seasons</li>
+                        <div class="content-card h-100">
+                            <h5 class="mb-3">What this space holds</h5>
+                            <ul class="list-checks mb-0">
+                                <li>Honest reflection without pressure.</li>
+                                <li>Insight that feels gentle and grounded.</li>
+                                <li>Clarity that turns into thoughtful action.</li>
+                                <li>A partner who meets you where you are.</li>
                             </ul>
                         </div>
                     </div>
@@ -95,65 +96,32 @@
             </div>
         </section>
 
-        <section class="section-spacer">
+        <section id="work" class="section-spacer">
             <div class="container">
-                <div class="row mb-4 align-items-center">
-                    <div class="col-lg-7">
-                        <h2 class="mb-3">Ways we can work together</h2>
-                        <p>Sessions are designed to mirror the pace and depth you need. Every offering blends practical structure with the reflective space required for insight.</p>
-                    </div>
-                </div>
-                <div class="row col-spacing-30">
-                    <div class="col-md-4">
-                        <div class="content-card h-100">
-                            <p class="pill-badge mb-3">1:1 Coaching</p>
-                            <h4 class="mb-3">Personal coaching series</h4>
-                            <p class="mb-3">A dedicated container for your goals—career change, creative direction, or restoring balance. We map where you are, where you want to go, and the habits that will carry you there.</p>
-                            <a class="text-btn accent-text" href="work">See the structure</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="content-card h-100">
-                            <p class="pill-badge mb-3">Workshops</p>
-                            <h4 class="mb-3">Team and group sessions</h4>
-                            <p class="mb-3">Facilitated sessions that combine reflection and action. Ideal for teams wanting clearer communication, grounded leadership, and a shared sense of purpose.</p>
-                            <a class="text-btn accent-text" href="work">Explore workshops</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="content-card h-100">
-                            <p class="pill-badge mb-3">Intensives</p>
-                            <h4 class="mb-3">Focused single sessions</h4>
-                            <p class="mb-3">A single, extended session to focus on one decision, opportunity, or sticking point. Leave with a clear direction and a calm plan.</p>
-                            <a class="text-btn accent-text" href="contact">Schedule an intensive</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-spacer">
-            <div class="container">
-                <div class="row align-items-center col-spacing-30">
+                <div class="row align-items-start col-spacing-30">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <p class="pill-badge mb-3">My approach</p>
-                            <h3 class="mb-3">Practical, caring, and persistent.</h3>
-                            <p class="mb-4">My background in architecture and transformative coaching means we design both the inner and outer structures of your life. The work is spacious, kind, and honest—making room for the answers you already hold.</p>
+                            <h2 class="mb-3">Practical, paced, and held with presence.</h2>
+                            <p class="mb-3">Sessions are tailored to your needs and designed to foster lasting insight.</p>
                             <ul class="list-checks mb-4">
-                                <li>Space to slow down and notice what is true</li>
-                                <li>Structure that turns ideas into movement</li>
-                                <li>Accountability that respects your pace</li>
+                                <li>Free Discovery Call — 30 minutes, a gentle, no-obligation conversation.</li>
+                                <li>Core Coaching — packages of at least 6 sessions (1 hour each).</li>
+                                <li>The Noein Journey — longer-term support for deeper change (3 months recommended).</li>
+                                <li>Availability: mostly evenings and weekends. Delivery: online (Teams). Payment and scheduling details available on enquiry.</li>
                             </ul>
-                            <a class="btn accent-btn" href="about">Meet Alexandra</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="#contact">Book a discovery call</a>
+                            <a class="btn btn-outline-dark mb-2" href="#contact">Enquire about coaching</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <p class="pill-badge mb-3">Client notes</p>
-                            <h4 class="mb-3">What others experience</h4>
-                            <p class="mb-3">“Alexandra asks the question beneath the question. I left each session with more calm and a clear path forward.”</p>
-                            <p class="mb-0">“This space helped me hear myself again. Decisions that felt impossible became obvious.”</p>
+                            <h3 class="mb-3">For people ready to be seen and move forward.</h3>
+                            <ul class="list-checks mb-0">
+                                <li>People who feel stuck and want a way forward.</li>
+                                <li>The unseen, the underdogs, those seeking to be heard.</li>
+                                <li>Individuals open to personal exploration and truth-seeking.</li>
+                                <li>Professionals seeking clarity, alignment, and intentional direction.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -161,13 +129,67 @@
         </section>
 
         <section class="section-spacer">
+            <div class="container">
+                <div class="row col-spacing-30 align-items-start">
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h3 class="mb-3">A practice built on inner clarity.</h3>
+                            <p class="mb-3">Noein is drawn from the ancient Greek word noein (νοεῖν): to perceive with the mind — an inward clarity that arises when thinking turns into insight. This practice is less about supplying answers and more about creating the space where your own understanding can be found.</p>
+                            <p class="mb-4">Trained as an architect and then as a Transformative Coach, I know what it feels like to follow what I thought I had to do, silencing my own voice until I chose otherwise. That experience informs my work: I hold a practical, caring, and persistent presence that helps others find and live their truth.</p>
+                            <p class="mb-0"><strong>Architect, Transformative Coach.</strong> My work marries practical structure with inner exploration — helping people find alignment between who they are and what they do.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h4 class="mb-3">A warm place to rest, to see, and to move forward.</h4>
+                            <ul class="list-checks mb-4">
+                                <li>Curious, soft, and explorative.</li>
+                                <li>A safe space to feel and to think.</li>
+                                <li>Focus on raising awareness and returning to oneself.</li>
+                                <li>Supportive — I go with the client’s flow.</li>
+                                <li>I support individuals who wish to reconnect with themselves and design a life on their own terms.</li>
+                                <li>Noein is a thinking space that helps you notice what’s happening inside so you can choose differently, with clarity and confidence.</li>
+                            </ul>
+                            <p class="mb-0">— A space to think. A space to understand. A space to become.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-spacer">
+            <div class="container">
+                <div class="content-card">
+                    <div class="row mb-4 align-items-center">
+                        <div class="col-lg-8">
+                            <h3 class="mb-0">Gentle, grounded reflections from recent sessions.</h3>
+                        </div>
+                    </div>
+                    <div id="reviewCarousel" class="owl-carousel owl-theme">
+                        <div class="testimonial-box p-4">
+                            <p class="mb-3">“Alexandra made space for the question beneath my questions. I left each session lighter, with a calm next step I could trust.”</p>
+                            <p class="mb-0"><strong>Leadership coach client</strong></p>
+                        </div>
+                        <div class="testimonial-box p-4">
+                            <p class="mb-3">“I felt heard and unhurried. The pace was gentle, but the insights were deep. It helped me reconnect with what I actually want.”</p>
+                            <p class="mb-0"><strong>Creative professional</strong></p>
+                        </div>
+                        <div class="testimonial-box p-4">
+                            <p class="mb-3">“The structure kept me moving while the space let me breathe. I’m making decisions with more confidence and less noise.”</p>
+                            <p class="mb-0"><strong>Career transition client</strong></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="section-spacer">
             <div class="container">
                 <div class="content-card text-center">
-                    <p class="pill-badge mb-3">Ready to begin?</p>
-                    <h3 class="mb-3">Let’s design the next chapter together.</h3>
-                    <p class="mb-4">Share what you are navigating right now and we will decide what type of session fits best.</p>
-                    <a class="btn accent-btn mr-3 mb-2" href="contact">Book a conversation</a>
-                    <a class="btn btn-outline-dark mb-2" href="work">View coaching options</a>
+                    <h3 class="mb-3">If Noein feels like the right space, let’s begin with a short conversation.</h3>
+                    <p class="mb-4">Email: <a href="mailto:hello@noein.co.uk">hello@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
+                    <a class="btn accent-btn mr-3 mb-2" href="mailto:hello@noein.co.uk">Send an email</a>
+                    <a class="btn btn-outline-dark mb-2" href="#work">View coaching options</a>
                 </div>
             </div>
         </section>
@@ -230,5 +252,29 @@
 <script src="assets/plugins/gmaps.min.js"></script>
 <!-- Scripts -->
 <script src="assets/js/functions.js"></script>
+<script>
+    jQuery(function($){
+        var $reviewCarousel = $('#reviewCarousel');
+
+        if ($reviewCarousel.length && $.fn.owlCarousel) {
+            $reviewCarousel.owlCarousel({
+                items: 1,
+                loop: true,
+                margin: 20,
+                autoplay: true,
+                autoplayTimeout: 6000,
+                autoplayHoverPause: true,
+                nav: false,
+                dots: true,
+                autoHeight: true,
+                responsive: {
+                    0: { items: 1 },
+                    768: { items: 2 },
+                    1200: { items: 3 }
+                }
+            });
+        }
+    });
+</script>
 </body>
 </html>
