Update Calendly links and preloader

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                         <div class="d-flex flex-wrap align-items-center">
                             <a class="btn accent-btn mr-3 mb-2" href="#work">Work with me</a>
-                            <a class="btn btn-outline-dark mb-2" href="#contact">Book a discovery call</a>
+                            <a class="btn btn-outline-dark mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -109,7 +109,7 @@
                                 <li>The Noein Journey — longer-term support for deeper change (3 months recommended).</li>
                                 <li>Availability: mostly evenings and weekends. Delivery: online (Teams). Payment and scheduling details available on enquiry.</li>
                             </ul>
-                            <a class="btn accent-btn mr-3 mb-2" href="#contact">Book a discovery call</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mb-2" href="#contact">Enquire about coaching</a>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                     <div class="col-12 col-md-4 text-center text-md-right">
                         <ul class="list-horizontal-unstyled mb-0">
                             <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
-                            <li><a href="https://calendly.com/"><i class="far fa-calendar contact"></i></a></li>
+                            <li><a href="https://calendly.com/alexandraa-noein/30min"><i class="far fa-calendar contact"></i></a></li>
                             <li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
                             <li><a href="mailto:contact@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
                             <li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
