--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
     <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
+                <div class="content-card hero-tagline-box mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-lg-7 mb-4 mb-lg-0">
+                            <p class="hero-tagline-line mb-2">Coaching to help you <span class="tagline-highlight">see clearly</span>,</p>
+                            <p class="hero-tagline-line mb-2">reconnect with <span class="tagline-highlight">your truth</span>,</p>
+                            <p class="hero-tagline-line mb-0">and move forward <span class="tagline-highlight">with intention</span>.</p>
+                        </div>
+                        <div class="col-lg-5 text-lg-right">
+                            <img src="assets/images/clear-thinking@2x.png" alt="Illustration of scribble becoming a clear brain" class="hero-tagline-image img-fluid">
+                        </div>
+                    </div>
+                </div>
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">A space to think.</h1>
@@ -157,41 +169,51 @@
                             <a class="btn btn-outline-dark" href="lets-talk.html">Book a discovery call</a>
                         </div>
                     </div>
-                    <div class="row col-spacing-30">
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
-                                <p class="mb-0"><strong>V.H.</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“Alexandra was considerate and thought provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
-                                <p class="mb-0"><strong>Name withheld</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“It's been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
-                                <p class="mb-0"><strong>Name withheld</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
-                                <p class="mb-0"><strong>Name withheld</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“These sessions help you realise you have all the tools and answers to achieve what you want in certain aspects of your life.”</p>
-                                <p class="mb-0"><strong>Name withheld</strong></p>
-                            </div>
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="content-card h-100 testimonial-card">
-                                <p class="mb-3">“I have learnt so much about myself during our sessions and I would highly recommend them for anyone who is questioning their direction in life.”</p>
-                                <p class="mb-0"><strong>Name withheld</strong></p>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="owl-carousel testimonial-carousel" id="testimonialCarousel" data-owl-items="2" data-owl-xs="1" data-owl-sm="1" data-owl-md="2" data-owl-lg="2" data-owl-margin="24" data-owl-dots="true" data-owl-nav="false" data-owl-loop="true" data-owl-autoplay="true" data-owl-autoplayTimeout="6000">
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“Alexandra was considerate and thought provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“It's been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“These sessions help you realise you have all the tools and answers to achieve what you want in certain aspects of your life.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
+                                <div class="testimonial-carousel-card">
+                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <div>
+                                        <p class="mb-3">“I have learnt so much about myself during our sessions and I would highly recommend them for anyone who is questioning their direction in life.”</p>
+                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
