--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
             </div>
         </nav>
     </header>
-
+    
+    <div style="padding-top: 50px;"></div>
+    
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
             <div class="container">
