--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -64,7 +64,7 @@
         </nav>
     </header>
 
-    <main class="flex-fill">
+        <main class="flex-fill" style="padding-top: 50px;">
         <section class="section-spacer">
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
