Update contact info and spacing consistency

--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Meet Alexandra, the architect and transformative coach behind Noein.">
-    <meta name="keywords" content="Alexandra, Noein, transformative coach, about">
+    <meta name="description" content="Meet Alex, the architect and transformative coach behind Noein.">
+    <meta name="keywords" content="Alex, Noein, transformative coach, about">
     <title>Get to know me | Noein</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -64,24 +64,26 @@
         </nav>
     </header>
 
-        <main class="flex-fill" style="padding-top: 50px;">
+    <div class="navbar-placeholder"></div>
+
+        <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Meet Alexandra.</h1>
-                        <p class="mb-3">I’m Alexandra — an Architect and Transformative Coach, and the founder of Noein.</p>
+                        <h1 class="mb-3">Meet Alex.</h1>
+                        <p class="mb-3">I’m Alex — an Architect and Transformative Coach, and the founder of Noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career. As I grew in architecture, I realised the skills I loved most were the human ones: listening, guiding, helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, hence trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
                         <p class="mb-4">A space to think. A space to understand. A space to become.</p>
                         <div class="d-flex flex-wrap align-items-center">
                             <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:hello@noein.co.uk">Say hello</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center">
                         <div class="content-card p-4">
-                            <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alexandra" class="img-fluid rounded">
+                            <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
                         </div>
                     </div>
                 </div>
@@ -126,8 +128,8 @@
                     <div class="col-lg-6">
                         <div class="content-card h-100">
                             <h3 class="mb-3">What people say</h3>
-                            <p class="mb-3">“Working with Alexandra has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make some progress towards my goal.”</p>
-                            <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
+                            <p class="mb-3">“Working with Alex has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make some progress towards my goal.”</p>
+                            <p class="mb-3">“Working with Alex was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
                             <p class="mb-0"><strong>Name withheld &amp; V.H.</strong></p>
                         </div>
                     </div>
@@ -141,7 +143,7 @@
                     <h3 class="mb-3">Curious about working together?</h3>
                     <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
                     <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                    <a class="btn btn-outline-dark mb-2" href="mailto:hello@noein.co.uk">Send an email</a>
+                    <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                 </div>
             </div>
         </section>
@@ -171,7 +173,7 @@
                             <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
                             <li><a href="https://calendly.com/alexandraa-noein/30min"><i class="far fa-calendar contact"></i></a></li>
                             <li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
-                            <li><a href="mailto:hello@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
+                            <li><a href="mailto:alex@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
                             <li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
                             <li><a href="tel:"><i class="far fa-phone contact"></i></a></li>
                         </ul>
