--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         </nav>
     </header>
 
+    <div class="navbar-placeholder"></div>
+
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
             <div class="container">
@@ -139,7 +141,7 @@
                         <div class="content-card h-100">
                             <h3 class="mb-3">Why Noein.</h3>
                             <p class="mb-3">Noein comes from the ancient Greek word νοεῖν: to perceive with the mind. It speaks to the inner clarity that appears when thinking turns into insight.</p>
-                            <p class="mb-3">This practice was born from Alexandra’s own experience of choosing a path that honoured her values. It’s a calm place to reflect, reconnect, and act with intention.</p>
+                            <p class="mb-3">This practice was born from Alex’s own experience of choosing a path that honoured her values. It’s a calm place to reflect, reconnect, and act with intention.</p>
                             <p class="mb-0"><strong>Architect, Transformative Coach.</strong> Practical structure meets thoughtful exploration to help you see what’s true and move forward with confidence.</p>
                         </div>
                     </div>
@@ -175,21 +177,21 @@
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
+                                        <p class="mb-3">“Working with Alex was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“Alexandra was considerate and thought provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
+                                        <p class="mb-3">“Alex was considerate and thought provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“It's been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
+                                        <p class="mb-3">“It's been great working with Alex. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
@@ -225,8 +227,8 @@
             <div class="container">
                 <div class="content-card text-center">
                     <h3 class="mb-3">If Noein feels like the right space, let’s begin with a short conversation.</h3>
-                    <p class="mb-4">Email: <a href="mailto:hello@noein.co.uk">hello@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
-                    <a class="btn accent-btn mr-3 mb-2" href="mailto:hello@noein.co.uk">Send an email</a>
+                    <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
+                    <a class="btn accent-btn mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                     <a class="btn btn-outline-dark mb-2" href="lets-talk.html">Explore coaching options</a>
                 </div>
             </div>
@@ -257,7 +259,7 @@
                             <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
                             <li><a href="https://calendly.com/alexandraa-noein/30min"><i class="far fa-calendar contact"></i></a></li>
                             <li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
-                            <li><a href="mailto:hello@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
+                            <li><a href="mailto:alex@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
                             <li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
                             <li><a href="tel:"><i class="far fa-phone contact"></i></a></li>
                         </ul>
