--- a/lets-talk.html
+++ b/lets-talk.html
@@ -64,6 +64,8 @@
         </nav>
     </header>
 
+    <div class="navbar-placeholder"></div>
+
     <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
@@ -75,7 +77,7 @@
                         <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and on weekends.</p>
                         <div class="d-flex flex-wrap align-items-center">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:hello@noein.co.uk">Email Alexandra</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alex</a>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -107,9 +109,9 @@
                         <div class="content-card h-100">
                             <h3 class="mb-3">Contact me</h3>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
-                            <p class="mb-4">Email: <a href="mailto:hello@noein.co.uk">hello@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
+                            <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:hello@noein.co.uk">Send an email</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                         </div>
                     </div>
                 </div>
@@ -141,7 +143,7 @@
                             <li><a href="https://www.linkedin.com/"><i class="fab fa-linkedin contact"></i></a></li>
                             <li><a href="https://calendly.com/alexandraa-noein/30min"><i class="far fa-calendar contact"></i></a></li>
                             <li><a href="https://www.instagram.com/noeincoaching/"><i class="fab fa-instagram contact"></i></a></li>
-                            <li><a href="mailto:hello@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
+                            <li><a href="mailto:alex@noein.co.uk"><i class="far fa-envelope contact"></i></a></li>
                             <li><a href="sms:"><i class="far fa-comment contact"></i></a></li>
                             <li><a href="tel:"><i class="far fa-phone contact"></i></a></li>
                         </ul>
