--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Meet Alex, the architect and transformative coach behind Noein.">
     <meta name="keywords" content="Alex, Noein, transformative coach, about">
-    <title>Get to know me | Noein</title>
+    <title>noein | get to know me</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -71,8 +71,8 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Meet Alex.</h1>
-                        <p class="mb-3">I’m Alex — an Architect and Transformative Coach, and the founder of Noein.</p>
+                        <h1 class="mb-3">Meet Alexandra.</h1>
+                        <p class="mb-3">I’m Alexandra — a Transformative Coach, and the founder of Noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career. As I grew in architecture, I realised the skills I loved most were the human ones: listening, guiding, helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, hence trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
                         <p class="mb-4">A space to think. A space to understand. A space to become.</p>
