--- a/lets-talk.html
+++ b/lets-talk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Explore coaching with Noein — pricing, sessions, and how to book.">
     <meta name="keywords" content="coaching, discovery call, pricing, contact, Noein">
-    <title>Let’s talk | Noein</title>
+    <title>noein | let’s talk</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
