--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Noein is a calm coaching space to pause, think, and move forward with clarity.">
     <meta name="keywords" content="coaching, clarity, thinking space, noein">
-    <title>Noein | A space to think.</title>
+    <title>noein | a space to think</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -84,7 +84,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">A space to think.</h1>
-                        <p class="mb-3">At Noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                        <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
                         <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about receiving answers; it’s about reconnecting with yourself — uncovering what’s already within you.</p>
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                         <div class="d-flex flex-wrap align-items-center">
